cabal-version:      2.4
name:               game
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             FranckErnewein
maintainer:         franck.ernewein@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library vector
    exposed-modules: Vector
    hs-source-dirs: lib
    build-depends: base
    default-language: Haskell2010

executable game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base, vector
    hs-source-dirs:   app
    default-language: Haskell2010
